--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -3,6 +3,10 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = icons . freeverb # evaluator
 
+if WITH_SPECTMORPH
+SUBDIRS += spectmorph
+endif
+
 AM_CPPFLAGS += -I$(top_srcdir) -I.
 DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"$(strip $(basename $(<F)))\"" -DBSE_PLUGIN_COMPILATION
 AM_CXXFLAGS += $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE
