PLUGINS: SpectMorph: use QT5_MOC instead of just calling moc
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/plugins/spectmorph/gui/Makefile.am
+++ b/plugins/spectmorph/gui/Makefile.am
@@ -10,4 +10,4 @@ spectmorphoscgui_SOURCES = spectmorphoscgui.cc moc_spectmorphoscgui.cc spectmorp
 spectmorphoscgui_LDADD   = ../../../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS) $(SPECTMORPH_LIBS) $(SPECTMORPHGUI_LIBS)
 
 moc_spectmorphoscgui.cc: spectmorphoscgui.hh
-	moc spectmorphoscgui.hh > moc_spectmorphoscgui.cc
+	$(QT5_MOC) spectmorphoscgui.hh > moc_spectmorphoscgui.cc
