BUILD: support building without JACK
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -569,7 +569,13 @@ AC_DEFUN([MC_ASOUND_CHECK],
 ])
 AC_DEFUN([MC_JACK_REQUIREMENTS],
 [
-    PKG_CHECK_MODULES(JACK, jack >= 0.100.0)
+    AC_ARG_WITH([jack], AS_HELP_STRING([--without-jack], [Build Beast without JACK support]))
+
+    dnl check for jack unless --without-jack was used
+    if test "x$with_jack" != "xno"; then
+        PKG_CHECK_MODULES(JACK, jack >= 0.100.0, [with_jack="yes"], [with_jack="no"])
+    fi
+    AM_CONDITIONAL(WITH_JACK, [test "x$with_jack" != "xno"])
     AC_SUBST(JACK_CFLAGS)
     AC_SUBST(JACK_LIBS)
 ])
@@ -787,5 +793,6 @@ Autoconfiguration complete.
 	MMX/SSE optimizations:		${summary_mmx_sse}
 	NPM available:			${summary_npm}
 	MP3 support using libmad:	${summary_libmad}
+	JACK support:			${with_jack}
 
 EOF
