BUILD: added BseBlepOsc Makefile
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -745,6 +745,7 @@ bse/tests/Makefile
 plugins/Makefile
 plugins/icons/Makefile
 plugins/freeverb/Makefile
+plugins/bleposc/Makefile
 drivers/Makefile
 pybeast/Makefile
 beast-gtk/Makefile
