AIDACC: tests: force all tests to be built
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/aidacc/tests/Makefile.sub
+++ b/aidacc/tests/Makefile.sub
@@ -19,6 +19,7 @@ tests_checktargets += t302-testfail-idl-test
 
 # == tests_binaries ==
 define tests_run_RULE
+all_targets += tests/$(1)
 .PHONY: tests/run-$(1)
 $(1)--testexec: tests/$(1)
 	@echo '  EXEC    ' $(1)
