--- a/aidacc/tests/Makefile.sub
+++ b/aidacc/tests/Makefile.sub
@@ -29,8 +29,8 @@ CLEANFILES += tests/$(1)
 .PHONY: tests/run-$(1)
 endef
 $(foreach PRG,$(tests_binaries),$(eval $(call tests_run_RULE,$(PRG))))
-tests/%: tests/%.cc tests/testing.hh aidacc/aida.hh aida.o
-	$(CXXCOMPILE) $(CXXFLAGS) $< aida.o -o $@
+tests/%: tests/%.cc tests/testing.hh aidacc/aida.hh aidacc/aida.o
+	$(CXXCOMPILE) $(CXXFLAGS) $< aidacc/aida.o -o $@
 
 # == check-tests ==
 check-tests: $(sort $(tests_checktargets))
