--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -17,6 +17,8 @@ sfi_public_headers = $(strip \
 	sficxx.hh	sfiring.hh	sfimemory.hh	sficomport.hh	\
 			sfi.hh						\
 	gbsearcharray.hh \
+	entropy.hh		\
+	randomhash.hh		\
 	testing.hh	\
 )
 sfi_all_sources = $(strip \
@@ -28,6 +30,8 @@ sfi_all_sources = $(strip \
 	sfitime.cc	sfitypes.cc	sfivalues.cc	\
 	sfivisitors.cc	sfiustore.cc	\
 			sfiring.cc	sfimemory.cc	sficomport.cc	\
+	entropy.cc		\
+	randomhash.cc		\
 	testing.cc	\
 )
 sfi_extra_sources = $(strip \
