RES: add toplevel res/ directory for internal program resources
Implementation is based on Rapicorn commit id:
	bf228016cba3f6d252ee2cc38e1ed32607f37bf0

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,9 @@ topdir = $(abs_top_srcdir)
 
 SUBDIRS		= . sfi bse plugins drivers pybeast beast-gtk launchers library tools ebeast po docs data tests
 
+# == res/ ==
+# define res_resfiles_list
+include res/Makefile.sub
 
 # == doc/ install ==
 projectdocsdir   = $(beastdocdir)/
