--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -45,7 +45,7 @@ ENABLE_PREPROCESSING	= YES
 MACRO_EXPANSION		= YES
 EXPAND_ONLY_PREDEF	= YES
 PREDEFINED  = DOXYGEN BSE_CONVENIENCE __SIZEOF_LONG__=8
-PREDEFINED += static_assert(x,y)= RAPICORN_STATIC_ASSERT(x)= RAPICORN_STARTUP_ASSERT(x)=
+PREDEFINED += static_assert(x,y)= RAPICORN_STARTUP_ASSERT(x)=
 PREDEFINED += "record=struct" "sequence=struct" "RAPICORN_PIXBUF_TYPE=Pixbuf" "G_BEGIN_DECLS=" "G_END_DECLS="
 PREDEFINED += "__attribute__(x)=" RAPICORN_CONST= RAPICORN_NORETURN= RAPICORN_NOINLINE= RAPICORN_PRINTF(x,y)=
 
