--- a/misc/Dockerfile-apt.in
+++ b/misc/Dockerfile-apt.in
@@ -48,11 +48,11 @@ ENV DISTRELEASE		"@DISTRELEASE@"
 # Build and install SpectMorph 0.3.3
 ### Dependencies
 RUN retry apt-get install -y \
-    libao-dev qtbase5-dev libjack-dev libfftw3-dev libboost-dev libsndfile1-dev
+    libao-dev qtbase5-dev libjack-jackd2-dev libfftw3-dev libboost-dev libsndfile1-dev
 ### Clone repository
 RUN cd /usr/src/ && \
     retry git clone http://space.twc.de/public/git/spectmorph.git && \
-    cd /usr/src/spectmorph && git checkout 0.3.3 -b stable
+    cd /usr/src/spectmorph # need latest version here   && git checkout 0.3.3 -b stable
 ### Compile
 RUN cd /usr/src/spectmorph/ && \
     nice ./autogen.sh --prefix=/usr && \
